--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,64 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  path_provider: ^2.0.11
+  dio: ^4.0.6
+  equatable: ^2.0.0
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  get_it: ^7.2.0
+  floor: ^1.4.1
+  package_info_plus: ^3.0.2
+  flutter_svg: ^1.1.6
+  loop_page_view: ^1.2.0
+  pin_code_fields: ^7.4.0
+  timer_count_down: ^2.2.2
+  device_info_plus: ^8.0.0
+  connectivity_wrapper: ^1.1.1
+  connectivity_plus: ^3.0.2
+  check_vpn_connection: ^0.0.2
+  flutter_easyloading: ^3.0.5
+  pointycastle: ^3.6.2
+  crypto: ^3.0.2
+  geolocator: ^9.0.2
+  flutter_staggered_animations: ^1.1.1
+  animated_switcher_plus: ^1.0.3
+  stretchy_header: ^2.0.0
+  dotted_border: ^2.0.0+3
+  animated_size_and_fade: ^3.0.1
+  url_launcher: ^6.1.11
+  share_plus: ^6.3.0
+  persian_number_utility: ^1.1.3
+  shamsi_date: ^1.0.1
+  file_picker: ^5.2.5
+  flutter_launcher_icons: ^0.11.0
+  shared_preferences: ^2.0.17
+  animations: ^2.0.7
+  flutter_rating_bar: ^4.0.1
+  flutter_staggered_grid_view: ^0.6.2
+  scroll_to_index: ^3.0.1
+  inview_notifier_list: ^3.0.0
+  cached_network_image: ^3.2.3
+  animate_do: ^3.0.2
+  url_strategy: ^0.2.0
+  uni_links: ^0.5.1
+  cool_alert: ^2.0.1
+  context_holder: ^0.0.5
+  uni_links_web: ^0.1.0
+  just_the_tooltip: ^0.0.12
+  rxdart: ^0.27.7
+  intl: ^0.18.0
+  flutter_web_frame: ^1.0.0
+    #  firebase_core: ^2.15.0
+    #  firebase_messaging: ^14.6.5
+  #  firebase_analytics: ^10.4.4
+  webviewx: ^0.2.2
+  adtrace_sdk_flutter: ^1.3.2
+  flutter_localization: ^0.1.13
+  circular_chart_flutter: ^0.0.2
+  syncfusion_flutter_charts: ^22.2.11
+  fl_chart: ^0.63.0
+  switcher: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -58,11 +116,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-    # To add assets to your application, add an assets section, like this:
-    assets:
-      - images/
-      - icons/
-      - fonts/
+  # To add assets to your application, add an assets section, like this:
+  assets:
+    - images/
+    - icons/
+    - fonts/
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,10 +133,10 @@ flutter:
     # "family" key with the font family name, and a "fonts" key with a
     # list giving the asset and other descriptors for the font. For
     # example:
-    fonts:
-      - family: iran
-        fonts:
-          - asset: fonts/IRANYekanX-Light.ttf
+  fonts:
+    - family: iran
+      fonts:
+        - asset: fonts/IRANYekanX-Light.ttf
   #         - asset: fonts/Schyler-Italic.ttf
   #           style: italic
   #   - family: Trajan Pro
