--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -84,9 +84,9 @@ dependencies:
   intl: ^0.18.0
   flutter_web_frame: ^1.0.0
     #  firebase_core: ^2.15.0
-    #  firebase_messaging: ^14.6.5
+  #  firebase_messaging: ^14.6.5
   #  firebase_analytics: ^10.4.4
-  webviewx: ^0.2.2
+#  webviewx: ^0.2.2
   adtrace_sdk_flutter: ^1.3.2
   flutter_localization: ^0.1.13
   circular_chart_flutter: ^0.0.2
@@ -110,7 +110,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  generate: true
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -118,9 +118,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
-    - icons/
-    - fonts/
+    - assets/images/
+    - assets/icons/
+    - assets/fonts/
 
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
@@ -136,7 +136,7 @@ flutter:
   fonts:
     - family: iran
       fonts:
-        - asset: fonts/IRANYekanX-Light.ttf
+        - asset: assets/fonts/IRANYekanX-Light.ttf
   #         - asset: fonts/Schyler-Italic.ttf
   #           style: italic
   #   - family: Trajan Pro
