--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dependencies:
   #  simple_barcode_scanner: ^0.0.8
   barcode_scan2: ^4.2.4
   bottom_picker: ^2.0.4
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
