--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,8 @@ dependencies:
   barcode_scan2: ^4.2.4
   bottom_picker: ^2.0.4
   iconsax: ^0.0.8
+  isar: ^3.1.0+1
+  isar_flutter_libs: 3.1.0+1 # contains Isar Core
 
 dev_dependencies:
   flutter_test:
@@ -109,6 +111,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: any
+  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -120,7 +124,6 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
