--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -100,6 +100,7 @@ dependencies:
   iconsax: ^0.0.8
   isar: ^3.1.0+1
   isar_flutter_libs: 3.1.0+1 # contains Isar Core
+  flutter_seekbar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
