add state page and repository and bloc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ dependencies:
   isar_flutter_libs: 3.1.0+1 # contains Isar Core
   flutter_seekbar: ^1.0.1
   flutter_switch: ^0.3.2
+  persian_datetime_picker: ^2.6.0
 
 dev_dependencies:
   flutter_test:
