--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -103,6 +103,8 @@ dependencies:
   flutter_seekbar: ^1.0.1
   flutter_switch: ^0.3.2
   persian_datetime_picker: ^2.6.0
+#  jalali_table_calendar: ^1.2.0
+  jiffy: ^6.2.1
 
 dev_dependencies:
   flutter_test:
