--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,21 +91,23 @@ dependencies:
   flutter_localization: ^0.1.13
   circular_chart_flutter: ^0.0.2
   syncfusion_flutter_charts: ^22.2.11
-  fl_chart: ^0.63.0
+  #  fl_chart: ^0.63.0
   switcher: ^1.0.0
   flutter_otp_text_field: ^1.1.1
   #  simple_barcode_scanner: ^0.0.8
   barcode_scan2: ^4.2.4
-#  bottom_picker: ^2.0.4
+  #  bottom_picker: ^2.0.4
   iconsax: ^0.0.8
   isar: ^3.1.0+1
   isar_flutter_libs: 3.1.0+1 # contains Isar Core
   flutter_seekbar: ^1.0.1
   flutter_switch: ^0.3.2
   persian_datetime_picker: ^2.6.0
-#  jalali_table_calendar: ^1.2.0
+  #  jalali_table_calendar: ^1.2.0
   jiffy: ^6.2.1
   sizer: ^2.0.15
+  flutter_blue_plus: ^1.26.1
+
 
 
 dev_dependencies:
