--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   path_provider: ^2.0.11
-  dio: ^4.0.6
+  dio: ^5.4.2+1
   equatable: ^2.0.0
   bloc: ^8.1.0
   flutter_bloc: ^8.1.1
@@ -109,6 +109,9 @@ dependencies:
   flutter_blue_plus: ^1.26.1
   flutter_colorpicker: ^1.0.3
 
+  curl_logger_dio_interceptor: ^1.0.0
+  pretty_dio_logger: ^1.3.1
+  logger: ^2.2.0
 
 dev_dependencies:
   flutter_test:
