--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.002+3
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  path_provider: ^2.0.11
+  path_provider: ^2.1.3
   dio: ^5.4.2+1
   equatable: ^2.0.0
   bloc: ^8.1.0
@@ -106,12 +106,15 @@ dependencies:
   #  jalali_table_calendar: ^1.2.0
   jiffy: ^6.2.1
   sizer: ^2.0.15
-  flutter_blue_plus: ^1.26.1
+  flutter_blue_plus: ^1.32.2
   flutter_colorpicker: ^1.0.3
 
   curl_logger_dio_interceptor: ^1.0.0
   pretty_dio_logger: ^1.3.1
   logger: ^2.2.0
+  pinput: ^4.0.0
+  flutter_linear_datepicker: ^2.0.5
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -123,8 +126,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: any
-  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.9
+#  isar_generator: ^3.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -141,7 +144,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
-
+    - .env
     # An image asset can refer to one or more resolution-specific "variants", see
     # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -157,6 +160,9 @@ flutter:
     - family: iran
       fonts:
         - asset: assets/fonts/IRANYekanX-Light.ttf
+    - family: sans
+      fonts:
+        - asset: assets/fonts/sans.ttf
   #         - asset: fonts/Schyler-Italic.ttf
   #           style: italic
   #   - family: Trajan Pro
