--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,14 +81,14 @@ dependencies:
   uni_links_web: ^0.1.0
   just_the_tooltip: ^0.0.12
   rxdart: ^0.27.7
-  intl: ^0.18.0
+  intl: any
   flutter_web_frame: ^1.0.0
   #  firebase_core: ^2.15.0
   #  firebase_messaging: ^14.6.5
   #  firebase_analytics: ^10.4.4
   #  webviewx: ^0.2.2
   adtrace_sdk_flutter: ^1.3.2
-  flutter_localization: ^0.1.13
+  flutter_localization: any
   circular_chart_flutter: ^0.0.2
   syncfusion_flutter_charts: ^22.2.11
   #  fl_chart: ^0.63.0
