--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,7 +90,7 @@ dependencies:
   adtrace_sdk_flutter: ^1.3.2
   flutter_localization: any
   circular_chart_flutter: ^0.0.2
-  syncfusion_flutter_charts: ^22.2.11
+  syncfusion_flutter_charts: ^25.1.42+1
   #  fl_chart: ^0.63.0
   switcher: ^1.0.0
   flutter_otp_text_field: ^1.1.1
